--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -1,19 +1,15 @@
 <p><img src="images/Images_Articles/IMG_3085.JPG" alt="IMG 3085" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px;" /></p>
 <p style="font-size: 11px; text-align: center; color: #3ba4d8;"><a href="https://www.facebook.com/Gbielliphotographie/" style="text-decoration: none; font-size: 10px;">&copy;GuillaumeBielli</a></p>
 <hr />
-<div class="btn-group d-flex justify-content-center">
-	<a href="#Dps_section" class="btn btn-primary w-100">Dispositif Premier Secours</a>
-	<a href="#Formation_section" class="btn btn-danger w-100">Formations Secourisme</a>
-	<a href="#Sauvetage_section" class="btn btn-success w-100">Sauvetage Sportif</a>
-</div>
+<div class="btn-group d-flex justify-content-center"><a href="#Dps_section" class="btn btn-primary w-100">Dispositif Premier Secours</a> <a href="#Formation_section" class="btn btn-danger w-100">Formations Secourisme</a> <a href="#Sauvetage_section" class="btn btn-success w-100">Sauvetage Sportif</a></div>
 <hr />
-<div id="Sauvetage_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; line-height: 80%; color: #343a40 ;">
-	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; background-color: #ffc107 ;">Vie du Club :</h3>
-	<p class="center" style="font-size: 13pt;">L'Assemblée Générale annuel aura lieu le :</p>
-	<p class="center" style="font-size: 13pt; font-weight: bold;">Mercredi 19 Septembre</p>
-	<p class="center" style="font-size: 12pt;">à partir de 20h</p>
-	<p class="center" style="font-size: 12pt;">Salle de formation, Allée des Sports 31520 Ramonville-Saint-Agne</p>
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d722.9548469051008!2d1.4800618881695604!3d43.547806670721315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebe80e924ff91%3A0x87ad1eb92a385b8a!2sAll%C3%A9e+des+Sports%2C+31520+Ramonville-Saint-Agne!5e0!3m2!1sfr!2sfr!4v1535528687229" width="100%" height="200" frameborder="0" style="border:0" allowfullscreen style="margin: 5px;"></iframe>
+<div id="Sauvetage_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; line-height: 80%; color: #343a40;">
+	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; background-color: #ffc107;">Vie du Club :</h3>
+	<p class="center" style="font-size: 13pt;">L'Assembl&eacute;e G&eacute;n&eacute;rale annuelle :</p>
+	<p class="center" style="font-size: 13pt; font-weight: bold;">Mercredi 19 Septembre 2018</p>
+	<p class="center" style="font-size: 12pt;">&agrave; partir de 20h</p>
+	<p class="center" style="font-size: 12pt;">Salle de formation (sous les tribunes), All&eacute;e des Sports 31520 Ramonville-Saint-Agne</p>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d722.9548469051008!2d1.4800618881695604!3d43.547806670721315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebe80e924ff91%3A0x87ad1eb92a385b8a!2sAll%C3%A9e+des+Sports%2C+31520+Ramonville-Saint-Agne!5e0!3m2!1sfr!2sfr!4v1535528687229" width="100%" height="200" style="margin: 5px;" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 </div>
 <hr />
 <div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
@@ -30,12 +26,37 @@
 		</thead>
 		<tbody>
 			<tr>
-					<td style="margin:auto; text-align: center; font-size: 12pt; font-weight: bold;text-decoration: underline;" colspan=4>Saison 2018 - 2019</td>
+				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
+			</tr>
+			<tr>
+				<th scope="row">LIDL Star Ligue - F&eacute;nix vs Chamb&eacute;ry</th>
+				<td>Toulouse - Palais des Sports</td>
+				<td>05-09-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">Vitalsport D&eacute;cathlon Escalquens</th>
+				<td>Escalquens - D&eacute;cathlon</td>
+				<td>08/09-09-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">F&ecirc;te Locale Escalquens</th>
+				<td>Escalquens</td>
+				<td>14/15/16-09-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">Sports au f&eacute;minin</th>
+				<td>La Ram&eacute;e</td>
+				<td>22-09-2018</td>
 			</tr>
 			<tr>
 				<th scope="row">Bouge ton Campus</th>
 				<td>Toulouse - INSA</td>
 				<td>30-09-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">Les Courbes du 31</th>
+				<td>Auzielle</td>
+				<td>07-10-2018</td>
 			</tr>
 		</tbody>
 	</table>
@@ -43,8 +64,8 @@
 <hr />
 <div id="Formation_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #d9534f;">Formations Secourisme des prochains mois :</h3>
-	<p style="font-size: 12pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Les inscritions se font en cliquant sur le calendrier ci-contre &agrave; la date et l'&eacute;vènement voulu.</p>
-	<p style="font-size: 10pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Toutes nos dates ne sont pas reprises ci-dessous nous vous invitons à consulter le calendrier ci-contre.</p>
+	<p style="font-size: 12pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Les inscritions se font en cliquant sur le calendrier ci-contre &agrave; la date et l'&eacute;v&egrave;nement voulu.</p>
+	<p style="font-size: 10pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Toutes nos dates ne sont pas reprises ci-dessous nous vous invitons &agrave; consulter le calendrier ci-contre.</p>
 	<hr />
 	<!-- <span class="label label-warning">En Cours</span> -->
 	<table class="table table-striped" style="margin-left: auto; margin-right: auto;">
@@ -58,71 +79,71 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td style="margin:auto; text-align: center; font-size: 12pt; font-weight: bold;text-decoration: underline;" colspan=4>Saison 2018 - 2019</td>
+				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>20-10-2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>22-10-2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>27-10-2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue Formateurs Premiers Secours</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>25-11-2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue Formateurs Premiers Secours</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>01-12-2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue Formateurs PSC1</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>02-12-2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>02-12-2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>22-12-2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>23-12-2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>26-12-2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE2</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>02-01-2019</td>
 			</tr>
@@ -134,7 +155,7 @@
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #449d44;">Sauvetage Sportif :</h3>
 	<p class="center" style="color: #449d44; font-size: 12pt;">Les r&eacute;sultats des comp&eacute;titions de la saison 2017 - 2018 disponnibles&nbsp;<a href="index.php?option=com_content&amp;view=article&amp;id=27:actualites&amp;catid=2:non-categorise" style="text-decoration: none; font-weight: bold; color: #339966;">ICI</a>&nbsp;</p>
 	<p class="center" style="color: #343a40; font-size: 12pt;">Reprise des entrainements le :</p>
-	<p class="center" style="color: #343a40 ;; font-size: 13pt; font-weight: bold;">Lundi 1 Octobre 2018</p>
+	<p class="center" style="color: #343a40; ; font-size: 13pt; font-weight: bold;">Lundi 1 Octobre 2018</p>
 </div>
 <hr />
 <div class="row mb-3">
@@ -154,7 +175,7 @@
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="card">
 					<div class="card-body text-center"><em class="fas fa-ambulance text-danger" style="font-size: 45px;"></em>
-						<p><br/></p>
+						<p>&nbsp;</p>
 						<p>Venez apprendre les gestes qui sauvent</p>
 					</div>
 				</div>
@@ -169,7 +190,7 @@
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="card">
 					<div class="card-body text-center"><em class="fas fa-tint text-primary" style="font-size: 45px;"></em>
-						<p><br/></p>
+						<p>&nbsp;</p>
 						<p>Venez vous former au sauvetage aquatique,</p>
 					</div>
 				</div>
@@ -189,24 +210,7 @@
 	</div>
 </div>
 <hr />
-<h3 class="center" style="color: #3b5998; padding-bottom: 10px;">Notre FACEBOOK</h3>
+<a class="center" href="https://www.facebook.com/clubdesauvetagetoulousain/" style="color: #3b5998; padding-bottom: 10px;" target="_blank"><h3>Notre FACEBOOK</h3></a>
 <p>
-	<iframe class="rounded" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fclubdesauvetagetoulousain%2F&amp;tabs=timeline&amp;width=500&amp;height=500&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" width="500" height="500" style="border: none; overflow: hidden; display: block; margin-left: auto; margin-right: auto; margin-bottom: 12px;" frameborder="0" scrolling="no"></iframe>
+	<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fclubdesauvetagetoulousain%2F&amp;tabs=timeline&amp;width=500&amp;height=800&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" width="500" height="500" class="rounded" style="border: none; overflow: hidden; display: block; margin-left: auto; margin-right: auto; margin-bottom: 12px;" frameborder="0" scrolling="no"></iframe>
 </p>
-
-<!-- Load Facebook SDK for JavaScript -->
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/fr_FR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
-<!-- Your customer chat code -->
-<div class="fb-customerchat"
-  attribution=setup_tool
-  page_id="433296076790372"
-  theme_color="#fa3c4c">
-</div>
