--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -5,21 +5,21 @@
 <hr />
 <div id="Sauvetage_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; line-height: 80%; color: #343a40;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; background-color: #ffc107;">Vie du Club :</h3>
-	<p class="center" style="font-size: 13pt;">L'Assembl&eacute;e G&eacute;n&eacute;rale annuelle :</p>
+	<p class="center" style="font-size: 13pt;">L'Assemblée Générale annuelle :</p>
 	<p class="center" style="font-size: 13pt; font-weight: bold;">Mercredi 19 Septembre 2018</p>
-	<p class="center" style="font-size: 12pt;">&agrave; partir de 20h</p>
-	<p class="center" style="font-size: 12pt;">Salle de formation (sous les tribunes), All&eacute;e des Sports 31520 Ramonville-Saint-Agne</p>
+	<p class="center" style="font-size: 12pt;">à partir de 20h</p>
+	<p class="center" style="font-size: 12pt;">Salle de formation (sous les tribunes), Allée des Sports 31520 Ramonville-Saint-Agne</p>
 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d722.9548469051008!2d1.4800618881695604!3d43.547806670721315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebe80e924ff91%3A0x87ad1eb92a385b8a!2sAll%C3%A9e+des+Sports%2C+31520+Ramonville-Saint-Agne!5e0!3m2!1sfr!2sfr!4v1535528687229" width="100%" height="200" style="margin: 5px;" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 </div>
 <hr />
 <div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
-	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #337ab7;">DPS &agrave; venir :</h3>
-	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenci&eacute;s uniquement - Compte EOS obligatoire) : <a href="https://eos.ffss.fr" style="decoration-text: none; color: #333399; font-weight: bold;">Cliquez-ici</a></p>
+	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #337ab7;">DPS à venir :</h3>
+	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenciés uniquement - Compte EOS obligatoire) : <a href="https://eos.ffss.fr" style="decoration-text: none; color: #333399; font-weight: bold;">Cliquez-ici</a></p>
 	<hr />
 	<table class="table table-striped">
 		<thead>
 			<tr>
-				<th scope="col">Activit&eacute;</th>
+				<th scope="col">Activité</th>
 				<th scope="col">Lieu</th>
 				<th scope="col">Date</th>
 			</tr>
@@ -29,23 +29,23 @@
 				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
 			</tr>
 			<tr>
-				<th scope="row">LIDL Star Ligue - F&eacute;nix vs Chamb&eacute;ry</th>
+				<th scope="row">LIDL Star Ligue - Fénix vs Chambéry</th>
 				<td>Toulouse - Palais des Sports</td>
 				<td>05-09-2018</td>
 			</tr>
 			<tr>
-				<th scope="row">Vitalsport D&eacute;cathlon Escalquens</th>
-				<td>Escalquens - D&eacute;cathlon</td>
+				<th scope="row">Vitalsport Décathlon Escalquens</th>
+				<td>Escalquens - Décathlon</td>
 				<td>08/09-09-2018</td>
 			</tr>
 			<tr>
-				<th scope="row">F&ecirc;te Locale Escalquens</th>
+				<th scope="row">Fête Locale Escalquens</th>
 				<td>Escalquens</td>
 				<td>14/15/16-09-2018</td>
 			</tr>
 			<tr>
-				<th scope="row">Sports au f&eacute;minin</th>
-				<td>La Ram&eacute;e</td>
+				<th scope="row">Sports au féminin</th>
+				<td>La Ramée</td>
 				<td>22-09-2018</td>
 			</tr>
 			<tr>
@@ -64,15 +64,15 @@
 <hr />
 <div id="Formation_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #d9534f;">Formations Secourisme des prochains mois :</h3>
-	<p style="font-size: 12pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Les inscritions se font en cliquant sur le calendrier ci-contre &agrave; la date et l'&eacute;v&egrave;nement voulu.</p>
-	<p style="font-size: 10pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Toutes nos dates ne sont pas reprises ci-dessous nous vous invitons &agrave; consulter le calendrier ci-contre.</p>
+	<p style="font-size: 12pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Les inscritions se font en cliquant sur le calendrier ci-contre à la date et l'évènement voulu.</p>
+	<p style="font-size: 10pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Toutes nos dates ne sont pas reprises ci-dessous nous vous invitons à consulter le calendrier ci-contre.</p>
 	<hr />
 	<!-- <span class="label label-warning">En Cours</span> -->
 	<table class="table table-striped" style="margin-left: auto; margin-right: auto;">
 		<thead>
 			<tr>
 				<th scope="col">Formation</th>
-				<th scope="col">&nbsp;</th>
+				<th scope="col"></th>
 				<th scope="col">Lieu</th>
 				<th scope="col">Date</th>
 			</tr>
@@ -153,7 +153,7 @@
 <hr />
 <div id="Sauvetage_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #449d44;">Sauvetage Sportif :</h3>
-	<p class="center" style="color: #449d44; font-size: 12pt;">Les r&eacute;sultats des comp&eacute;titions de la saison 2017 - 2018 disponnibles&nbsp;<a href="index.php?option=com_content&amp;view=article&amp;id=27:actualites&amp;catid=2:non-categorise" style="text-decoration: none; font-weight: bold; color: #339966;">ICI</a>&nbsp;</p>
+	<p class="center" style="color: #449d44; font-size: 12pt;">Les résultats des compétitions de la saison 2017 - 2018 disponnibles<a href="index.php?option=com_content&view=article&id=27:actualites&catid=2:non-categorise" style="text-decoration: none; font-weight: bold; color: #339966;">ICI</a></p>
 	<p class="center" style="color: #343a40; font-size: 12pt;">Reprise des entrainements le :</p>
 	<p class="center" style="color: #343a40; ; font-size: 13pt; font-weight: bold;">Lundi 1 Octobre 2018</p>
 </div>
@@ -175,7 +175,7 @@
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="card">
 					<div class="card-body text-center"><em class="fas fa-ambulance text-danger" style="font-size: 45px;"></em>
-						<p>&nbsp;</p>
+						<p></p>
 						<p>Venez apprendre les gestes qui sauvent</p>
 					</div>
 				</div>
@@ -183,14 +183,14 @@
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="card">
 					<div class="card-body text-center"><em class="fas fa-hand-holding-heart text-info" style="font-size: 45px;"></em>
-						<p>Venez mettre &agrave; profit vos comp&eacute;tences de secouriste et/ou de sauveteur au sein de nos &eacute;quipes sur les postes de secours.</p>
+						<p>Venez mettre à profit vos compétences de secouriste et/ou de sauveteur au sein de nos équipes sur les postes de secours.</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="card">
 					<div class="card-body text-center"><em class="fas fa-tint text-primary" style="font-size: 45px;"></em>
-						<p>&nbsp;</p>
+						<p></p>
 						<p>Venez vous former au sauvetage aquatique,</p>
 					</div>
 				</div>
@@ -212,5 +212,5 @@
 <hr />
 <a class="center" href="https://www.facebook.com/clubdesauvetagetoulousain/" style="color: #3b5998; padding-bottom: 10px;" target="_blank"><h3>Notre FACEBOOK</h3></a>
 <p>
-	<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fclubdesauvetagetoulousain%2F&amp;tabs=timeline&amp;width=500&amp;height=800&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" width="500" height="500" class="rounded" style="border: none; overflow: hidden; display: block; margin-left: auto; margin-right: auto; margin-bottom: 12px;" frameborder="0" scrolling="no"></iframe>
+	<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fclubdesauvetagetoulousain%2F&tabs=timeline&width=500&height=800&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="500" class="rounded" style="border: none; overflow: hidden; display: block; margin-left: auto; margin-right: auto; margin-bottom: 12px;" frameborder="0" scrolling="no"></iframe>
 </p>
