--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -1,9 +1,9 @@
 <p><img src="images/Images_Articles/IMG_3085.JPG" alt="IMG 3085" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px;" /></p>
 <p style="font-size: 11px; text-align: center; color: #3ba4d8;"><a href="https://www.facebook.com/Gbielliphotographie/" style="text-decoration: none; font-size: 10px;">&copy;GuillaumeBielli</a></p>
 <hr />
-<div class="btn-group d-flex justify-content-center"><a href="#Dps_section" class="btn btn-primary w-100">Dispositif Premier Secours</a> <a href="#Formation_section" class="btn btn-danger w-100">Formations Secourisme</a> <a href="#Sauvetage_section" class="btn btn-success w-100">Sauvetage Sportif</a></div>
+<div class="btn-group d-flex justify-content-center"><a href="#Autre_section" class="btn btn-warning w-100">Vie du Club</a><a href="#Dps_section" class="btn btn-primary w-100">Dispositif Premier Secours</a> <a href="#Formation_section" class="btn btn-danger w-100">Formations Secourisme</a> <a href="#Sauvetage_section" class="btn btn-success w-100">Sauvetage Sportif</a></div>
 <hr />
-<div id="Sauvetage_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; line-height: 80%; color: #343a40;">
+<div id="Autre_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; line-height: 80%; color: #343a40;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; background-color: #ffc107;">Vie du Club :</h3>
 	<p class="center" style="font-size: 13pt;">L'Assemblée Générale annuelle :</p>
 	<p class="center" style="font-size: 13pt; font-weight: bold;">Mercredi 19 Septembre 2018</p>
